Fix rowcontainer gap

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -182,22 +182,22 @@ $colors: 'black', 'blue', 'white';
 
 // Styles used in markdown
 
+$rowcontainer-gap: 0.5em;
 [class*='rowcontainer'] {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-evenly;
   align-items: stretch;
-  gap: 0.5em;
+  gap: $rowcontainer-gap;
   margin-bottom: 26px;
   @media (max-width: 500px) {
     flex-direction: column;
   }
 }
-.rowcontainer3x > * {
-  max-width: calc(100% / 3);
-}
-.rowcontainer2x > * {
-  max-width: calc(100% / 2);
+@for $i from 2 through 3 {
+  .rowcontainer#{$i}x > * {
+    max-width: calc(100% / $i - $rowcontainer-gap / $i);
+  }
 }
 @media (max-width: 500px) {
   [class*='rowcontainer'] > * {
